<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@drawable/app_background"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text=""
                android:layout_height="100dp"
                android:textSize="30sp"
                android:layout_width="match_parent"
                android:gravity="right"
                android:padding="15dp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:id="@+id/textView"/>

        <EditText
                android:hint="Entrez une valeur"
                android:textColorHint="#9E9E9E"
                android:layout_width="match_parent"
                android:layout_height="156dp"
                android:textSize="35sp"
                android:id="@+id/textScreen"
                android:gravity="right"
                android:padding="15dp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="@android:color/transparent"/>

        <TableLayout
                android:shrinkColumns="*"
                android:stretchColumns="*"
                android:layout_weight="0"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="464dp"
                android:paddingTop="20dp">

            <ImageButton
                    android:id="@+id/buttonDelete"
                    android:layout_marginStart="300dp"
                    android:layout_height="55dp"
                    android:background="@drawable/button_background"
                    android:onClick="backspaceBTNPush"
                    app:srcCompat="@drawable/backspace" />

            <!-- TableRow 1 -->
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <Button
                        android:text="@string/c"
                        android:layout_weight="1"
                        android:background="@drawable/c_button_background"
                        style="@style/CalculatorButton"
                        android:onClick="clearBTNPush"
                        android:id="@+id/bu_reset"/>

                <Button
                        android:text="@string/_opn"
                        style="@style/CalculatorButton"
                        android:layout_weight="1"
                        android:onClick="openBTNPush"
                        android:id="@+id/bu_opn"/>

                <Button
                        android:text="@string/_close"
                        style="@style/CalculatorButton"
                        android:layout_weight="1"
                        android:onClick="closeBTNPush"
                        android:id="@+id/bu_close"/>

                <Button
                        android:text="@string/division"
                        android:layout_weight="1"
                        style="@style/CalculatorButton"
                        android:onClick="divideBTNPush"
                        android:id="@+id/bu_div" />


            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <Button
                        android:text="@string/_7"
                        style="@style/CalculatorButton"
                        android:layout_weight="1"
                        android:onClick="sevenBTNPush"
                        android:id="@+id/bu_7"/>

                <Button
                        android:text="@string/_8"
                        style="@style/CalculatorButton"
                        android:layout_weight="1"
                        android:onClick="eightBTNPush"
                        android:id="@+id/bu_8"/>

                <Button
                        android:text="@string/_9"
                        style="@style/CalculatorButton"
                        android:layout_weight="1"
                        android:onClick="nineBTNPush"
                        android:id="@+id/bu_9"/>

                <Button
                        android:text="@string/btn_multp"
                        style="@style/CalculatorButton"
                        android:layout_weight="1"
                        android:onClick="multiplyBTNPush"
                        android:id="@+id/bu_fois"/>

            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <Button
                        android:text="@string/_4"
                        style="@style/CalculatorButton"
                        android:layout_weight="1"
                        android:onClick="fourBTNPush"
                        android:id="@+id/bu_4"/>
                <Button
                        android:text="@string/_5"
                        style="@style/CalculatorButton"
                        android:layout_weight="1"
                        android:onClick="fiveBTNPush"
                        android:id="@+id/bu_5"/>
                <Button
                        android:text="@string/_6"
                        android:layout_weight="1"
                        style="@style/CalculatorButton"
                        android:onClick="sixBTNPush"
                        android:id="@+id/bu_6"/>
                <Button
                        android:text="@string/btn_moins"
                        android:layout_weight="1"
                        style="@style/CalculatorButton"
                        android:onClick="subtractBTNPush"
                        android:id="@+id/bu_moins"/>
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <Button
                        android:text="@string/_1"
                        android:layout_weight="1"
                        android:onClick="oneBTNPush"
                        style="@style/CalculatorButton"
                        android:id="@+id/bu_1"/>
                <Button
                        android:text="@string/_2"
                        android:layout_weight="1"
                        style="@style/CalculatorButton"
                        android:onClick="twoBTNPush"
                        android:id="@+id/bu_2"/>
                <Button
                        android:text="@string/_3"
                        android:layout_weight="1"
                        style="@style/CalculatorButton"
                        android:onClick="threeBTNPush"
                        android:id="@+id/bu_3"/>

                <Button
                        android:text="@string/btn_plus"
                        style="@style/CalculatorButton"
                        android:layout_weight="1"
                        android:onClick="addBTNPush"
                        android:id="@+id/bu_plus"/>

            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="105dp">
                <Button
                        android:text="@string/_0"
                        style="@style/CalculatorButton"
                        android:layout_weight="1"
                        android:layout_span="2"
                        android:onClick="zeroBTNPush"
                        android:id="@+id/bu_0"/>
                <Button
                        android:text="@string/virgule"
                        style="@style/CalculatorButton"
                        android:layout_weight="1"
                        android:onClick="dotBTNPush"
                        android:id="@+id/bu_point"/>
                <Button
                        android:text="@string/egale"
                        android:layout_weight="1"
                        android:background="@drawable/equals_button_background"
                        style="@style/CalculatorButton"
                        android:onClick="equalBTNPush"
                        android:id="@+id/bu_egal"
                        android:textSize="34sp"/>
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="15dp">


            </TableRow>

        </TableLayout>
    </LinearLayout>
</RelativeLayout>
